main modify6 upload

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -271,6 +271,9 @@ body {
     animation-play-state: paused;
     cursor: pointer;
   }
+  .main_poster_img:hover {
+    transform: scale(1.1);
+  }
 
   @keyframes loop {
     100% {
