--- a/static/css/index.css
+++ b/static/css/index.css
@@ -779,6 +779,7 @@ body {
     display: block;
     margin: 0 auto;
     width: 700px;
+    text-align: center;
   }
 
   .main_three_text {
@@ -1256,6 +1257,7 @@ body {
     display: block;
     margin: 0 auto;
     width: 100%;
+    text-align: center;
   }
 
   .main_three_text {
@@ -1369,7 +1371,7 @@ body {
   }
 
   .works_main_three h2 {
-      font-size: 1rem;
+      font-size: 0.9rem;
       margin: 0.5rem auto;
       font-weight: 600;
       text-align: center;
