logo renew upload

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
       <!-- pc버전 -->
   <div class="navbar_main">
     <a class="navbar_logo" href="{% url 'about:index' %}">
-        <img src="{% static 'img/logo.png' %}">
+        <img src="{% static 'img/logo.png' %}" alt="스튜디오야수 로고">
         <span style="vertical-align: middle;">STUDIO<br>BEAST</span>
     </a>
     
