css renew2 upload

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -498,7 +498,7 @@ body {
   .footer_right{
     font-weight: 700;
     font-size: 1rem!important;
-    color: #c2c0c0!important;
+    color: #dadada!important;
   }
 }
 
@@ -973,7 +973,7 @@ body {
   .footer_right{
     font-weight: 700;
     font-size: 0.9rem!important;
-    color: #c2c0c0!important;
+    color: #dadada!important;
   }
 }
 
@@ -1456,6 +1456,6 @@ body {
   .footer_right{
     font-weight: 700;
     font-size: 0.9rem!important;
-    color: #c2c0c0!important;
+    color: #dadada!important;
   }
 }
