works renew1 upload

--- a/templates/works/detail.html
+++ b/templates/works/detail.html
@@ -41,7 +41,7 @@
                 {% if index.subject != '김포' %}
                 {% if index.subject != '오후 네시' %}
                 <li>
-                    <span class="works_detail_li">기획, 제작</span>
+                    <span class="works_detail_li">기획 / 제작</span>
                     <span class="works_detail_lx">{{index.making}}</span>
                 </li>
                 {% endif %}
