--- a/templates/works/detail.html
+++ b/templates/works/detail.html
@@ -66,7 +66,7 @@
                 {% if index.subject == '감기' %}
                 <li>
                     <span class="works_detail_li">총괄프로듀서</span>
-                    <span class="works_detail_lx">{{index.making}}</span>
+                    <span class="works_detail_lx">{{index.produce}}</span>
                 </li>
                 {% endif %}  
                 <li>
