meta renew upload

--- a/templates/about/about.html
+++ b/templates/about/about.html
@@ -3,13 +3,13 @@
 {% block title %}
 <title>스튜디오야수 회사 소개</title>
 <meta name="title" content="스튜디오야수 회사 소개"/>
-<meta name="description" content="최고의 이야기를 담은 콘텐츠를 제작, 감동과 재미를 선사합니다."/>
+<meta name="description" content="우리의 영화는 이야기와 캐릭터들을 통해 사람들의 마음을 움직이고 영감을 주며, 생각할 거리를 제공합니다."/>
 <link rel="icon" href="{% static 'img/logo.png' %}"/>
 
 <meta property="og:title" content="스튜디오야수 회사 소개"/> 
 <meta property="og:url" content="https://www.studiobeast.co.kr/about/"/>
 <meta property="og:type" content="homepage"/>
-<meta property="og:description" content="최고의 이야기를 담은 콘텐츠를 제작, 감동과 재미를 선사합니다."/> 
+<meta property="og:description" content="우리의 영화는 이야기와 캐릭터들을 통해 사람들의 마음을 움직이고 영감을 주며, 생각할 거리를 제공합니다."/> 
 <meta property="og:image" content="{% static 'img/background.jpg' %}"/>
 {% endblock %}
 {% block content %}
