--- a/templates/news/news.html
+++ b/templates/news/news.html
@@ -4,13 +4,13 @@
 {% block title %}
 <title>스튜디오야수 보도 자료</title>
 <meta name="title" content="스튜디오야수 보도 자료"/>
-<meta name="description" content="최고의 이야기를 담은 콘텐츠를 제작, 감동과 재미를 선사합니다."/>
+<meta name="description" content="우리는 진보적이고 혁신적인 아이디어를 통해 관객에게 새로운 경험을 제공하고 콘텐츠 산업에서 선도적인 위치를 차지하기 위해 노력합니다."/>
 <link rel="icon" href="{% static 'img/logo.png' %}"/>
 
 <meta property="og:title" content="스튜디오야수 보도 자료"/> 
 <meta property="og:url" content="https://www.studiobeast.co.kr/news/"/>
 <meta property="og:type" content="homepage"/>
-<meta property="og:description" content="최고의 이야기를 담은 콘텐츠를 제작, 감동과 재미를 선사합니다."/> 
+<meta property="og:description" content="우리는 진보적이고 혁신적인 아이디어를 통해 관객에게 새로운 경험을 제공하고 콘텐츠 산업에서 선도적인 위치를 차지하기 위해 노력합니다."/> 
 <meta property="og:image" content="{% static 'img/background.jpg' %}"/>
 {% endblock %}
 {% block content %}
