--- a/templates/works/works.html
+++ b/templates/works/works.html
@@ -3,13 +3,13 @@
 {% block title %}
 <title>스튜디오야수 작품 소개</title>
 <meta name="title" content="스튜디오야수 작품 소개"/>
-<meta name="description" content="최고의 이야기를 담은 콘텐츠를 제작, 감동과 재미를 선사합니다."/>
+<meta name="description" content="우리는 국내뿐만 아니라 국제 시장에서도 인정받는 작품을 제작하여 K-콘텐츠 산업의 성장과 발전에 기여하고자 합니다."/>
 <link rel="icon" href="{% static 'img/logo.png' %}"/>
 
 <meta property="og:title" content="스튜디오야수 작품 소개"/> 
 <meta property="og:url" content="https://www.studiobeast.co.kr/works/"/>
 <meta property="og:type" content="homepage"/>
-<meta property="og:description" content="최고의 이야기를 담은 콘텐츠를 제작, 감동과 재미를 선사합니다."/> 
+<meta property="og:description" content="우리는 국내뿐만 아니라 국제 시장에서도 인정받는 작품을 제작하여 K-콘텐츠 산업의 성장과 발전에 기여하고자 합니다."/> 
 <meta property="og:image" content="{% static 'img/background.jpg' %}"/>
 {% endblock %}
 {% block content %}
