--- a/templates/news/detail.html
+++ b/templates/news/detail.html
@@ -3,13 +3,13 @@
 {% block title %}
 <title>스튜디오야수 보도 자료</title>
 <meta name="title" content="스튜디오야수 보도 자료"/>
-<meta name="description" content="최고의 이야기를 담은 콘텐츠를 제작, 감동과 재미를 선사합니다."/>
+<meta name="description" content="[{{ index.subject }}] 문의사항 답변 결과"/>
 <link rel="icon" href="{% static 'img/logo.png' %}"/>
 
 <meta property="og:title" content="스튜디오야수 보도 자료"/> 
 <meta property="og:url" content="https://www.studiobeast.co.kr/news/{{ index.id }}/"/>
 <meta property="og:type" content="homepage"/>
-<meta property="og:description" content="최고의 이야기를 담은 콘텐츠를 제작, 감동과 재미를 선사합니다."/> 
+<meta property="og:description" content="[{{ index.subject }}] 문의사항 답변 결과"/> 
 <meta property="og:image" content="{% static 'img/background.jpg' %}"/>
 {% endblock %}
 {% block content %}
