--- a/templates/works/detail.html
+++ b/templates/works/detail.html
@@ -3,13 +3,13 @@
 {% block title %}
 <title>스튜디오야수 {{index.subject}} 정보</title>
 <meta name="title" content="스튜디오야수 {{index.subject}} 정보"/>
-<meta name="description" content="최고의 이야기를 담은 콘텐츠를 제작, 감동과 재미를 선사합니다."/>
+<meta name="description" content="{{index.content}}"/>
 <link rel="icon" href="{% static 'img/logo.png' %}"/>
 
 <meta property="og:title" content="스튜디오야수 {{index.subject}} 정보"/> 
 <meta property="og:url" content="https://www.studiobeast.co.kr/works/{{index.id}}/"/>
 <meta property="og:type" content="homepage"/>
-<meta property="og:description" content="최고의 이야기를 담은 콘텐츠를 제작, 감동과 재미를 선사합니다."/> 
+<meta property="og:description" content="{{index.content}}"/> 
 <meta property="og:image" content="{% static 'img/background.jpg' %}"/>
 {% endblock %}
 {% block content %}
