meta renew1 upload

--- a/templates/news/detail.html
+++ b/templates/news/detail.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}
-<title>스튜디오야수 보도 자료</title>
-<meta name="title" content="스튜디오야수 보도 자료"/>
-<meta name="description" content="[{{ index.subject }}] 문의사항 답변 결과"/>
+<title>{{ index.subject }}</title>
+<meta name="title" content="{{ index.subject }}"/>
+<meta name="description" content="스튜디오야수의 {{ index.id }}번째 답변 결과"/>
 <link rel="icon" href="{% static 'img/logo.png' %}"/>
 
-<meta property="og:title" content="스튜디오야수 보도 자료"/> 
+<meta property="og:title" content="{{ index.subject }}"/> 
 <meta property="og:url" content="https://www.studiobeast.co.kr/news/{{ index.id }}/"/>
 <meta property="og:type" content="homepage"/>
-<meta property="og:description" content="[{{ index.subject }}] 문의사항 답변 결과"/> 
+<meta property="og:description" content="스튜디오야수의 {{ index.id }}번째 답변 결과"/> 
 <meta property="og:image" content="{% static 'img/background.jpg' %}"/>
 {% endblock %}
 {% block content %}
