--- a/templates/about/index.html
+++ b/templates/about/index.html
@@ -63,10 +63,9 @@
       <h2 class="main_two_text_one">About</h2>
     </div>
     <div class="main_two_wrapper">
-      열정과 전문성을 바탕으로 다양한 장르의 영화를 제작하는 회사입니다. 
-      목표는 관객들에게 감동과 즐거움을 선사하는 작품을 만드는 것입니다.
-      창의적이고 독창적인 아이디어를 가지고 있으며, 탁월한 시나리오 작성과 감각적인 시각 효과를 통해 영화의 퀄리티를 높이고 있습니다. 
-      또한, 우수한 배우와 스태프들과의 협업으로 최상의 연기와 제작을 이끌어내고 있습니다.
+      열정과 전문성을 바탕으로 다양한 장르의 영화 및 OTT를 제작하는 회사입니다.
+      목표는 관객들에게 감동과 즐거움을 선사하는 작품을 만드는 것이며, 창의적이고 독창적인 아이디어를 가지고 있습니다.
+      탁월한 시나리오 완성과 감각적인 시각 효과를 통해 콘텐츠의 퀄리티를 높이고 있습니다. 
     </div>
   </div>
   <div class="button_main"><a href="{% url 'about:about' %}" class="button_side">VIEW MORE</a></div>
