img renew upload

--- a/static/css/works.css
+++ b/static/css/works.css
@@ -172,6 +172,7 @@
     flex-wrap: wrap;
     justify-content: center;
     width: 400px;
+    transition: transform 0.3s;
 }
 
 .works_detail_ul {
@@ -368,6 +369,7 @@
     justify-content: center;
     width: 250px;
     height: 356px;
+    transition: transform 0.3s;
 }
 
 .works_detail_ul {
@@ -564,6 +566,7 @@
     flex-wrap: wrap;
     justify-content: center;
     width: 90vw;
+    transition: transform 0.3s;
 }
 
 .works_detail_ul {
