--- a/static/css/index.css
+++ b/static/css/index.css
@@ -84,9 +84,13 @@ body {
   /* 이미지 바 */
   .dark-background {
     width: 100%;
-    height: 100vh; /* 이미지의 높이를 설정하세요 */
+    height: 100vh;
     object-fit: cover;
     object-position: center;
+    background-image: url('/static/img/backimg-02.jpg');
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    background-position: center;
   }
 
   .img_text_main{
@@ -514,11 +518,17 @@ body {
   /* 이미지 바 */
   .dark-background {
     width: 100%;
-    height: 100vh; /* 이미지의 높이를 설정하세요 */
+    height: 100vh;
     object-fit: cover;
     object-position: center;
+    background-image: url('/static/img/backimg-03.jpg');
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    background-position: center;
   }
-
+  
+  
+  
   .img_text_main{
     position: absolute;
     text-align: center;
@@ -992,9 +1002,13 @@ body {
   /* 이미지 바 */
   .dark-background {
     width: 100%;
-    height: 100vh; /* 이미지의 높이를 설정하세요 */
+    height: 100vh;
     object-fit: cover;
     object-position: center;
+    background-image: url('/static/img/backimg-04.jpg');
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    background-position: center;
   }
 
   .img_text_main{
