img renew6 upload

--- a/templates/contact/contact.html
+++ b/templates/contact/contact.html
@@ -16,7 +16,7 @@
 {% block content %}
 <div class="contact_height">
     <div class="image-container">
-        <img src="{% static 'img/backimg-01.jpg' %}" class="side-background" alt="배경 이미지">
+      <div class="side-background" alt="배경 이미지"></div>
   
         <div class="img_about_main">
           <div class="img_about_one">CONTACT</div>
