--- a/templates/news/detail.html
+++ b/templates/news/detail.html
@@ -15,7 +15,7 @@
 {% block content %}
 <div class="news_detail_height">
     <div class="image-container">
-        <img src="{% static 'img/backimg-01.jpg' %}" class="side-background" alt="배경 이미지">
+        <div class="side-background" alt="배경 이미지"></div>
         <div class="img_about_main">
             <div class="img_about_one">NEWS</div>
             <div class="img_about_two">최고의 이야기를 담은 콘텐츠를 제작, 감동과 재미를 선사합니다.</div>
