--- a/static/css/about.css
+++ b/static/css/about.css
@@ -14,6 +14,8 @@
         height: 30rem; /* 이미지의 높이를 설정하세요 */
         object-fit: cover;
         object-position: center;
+        background-image: url('/static/img/backimg-00.jpg');
+        background-position: center;
     }
 
     .img_about_main{
@@ -121,6 +123,9 @@
         height: 30rem; /* 이미지의 높이를 설정하세요 */
         object-fit: cover;
         object-position: center;
+        background-image: url('/static/img/backimg-03.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
     }
 
     .img_about_main{
@@ -228,6 +233,9 @@
         height: 20rem; /* 이미지의 높이를 설정하세요 */
         object-fit: cover;
         object-position: center;
+        background-image: url('/static/img/backimg-04.jpg');
+        background-repeat: no-repeat;
+        background-position: center;
     }
 
     .img_about_main{
