--- a/templates/about/about.html
+++ b/templates/about/about.html
@@ -15,7 +15,7 @@
 {% block content %}
 <div class="about_height">
     <div class="image-container">
-        <img src="{% static 'img/backimg-01.jpg' %}" class="side-background" alt="배경 이미지">
+        <div class="side-background" alt="배경 이미지"></div>
 
         <div class="img_about_main">
         <div class="img_about_one">ABOUT</div>
