--- a/templates/about/index.html
+++ b/templates/about/index.html
@@ -15,7 +15,7 @@
 {% block content %}
 
   <div class="image-container">
-    <div class="dark-background"></div>
+    <div class="dark-background" alt="배경 이미지"></div>
 
     <div class="img_text_main">
       <div class="img_text_one">Cinematic Visions</div>
