--- a/static/css/about.css
+++ b/static/css/about.css
@@ -16,6 +16,8 @@
         object-position: center;
         background-image: url('/static/img/backimg-00.jpg');
         background-position: center;
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
     }
 
     .img_about_main{
