--- a/static/css/about.css
+++ b/static/css/about.css
@@ -127,6 +127,8 @@
         object-position: center;
         background-image: url('/static/img/backimg-06.jpg');
         background-position: center;
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
     }
 
     .img_about_main{
@@ -236,6 +238,8 @@
         object-position: center;
         background-image: url('/static/img/backimg-06.jpg');
         background-position: center;
+        background-repeat: no-repeat;
+        background-size: 100% 100%;
     }
 
     .img_about_main{
