--- a/static/css/index.css
+++ b/static/css/index.css
@@ -89,7 +89,7 @@ body {
     object-position: center;
     background-image: url('/static/img/backimg-02.jpg');
     background-repeat: no-repeat;
-    background-size: auto 100%;
+    background-size: 100% 100%;
     background-position: center;
   }
 
@@ -523,7 +523,7 @@ body {
     object-position: center;
     background-image: url('/static/img/backimg-06.jpg');
     background-repeat: no-repeat;
-    background-size: auto 100%;
+    background-size: 100% 100%;
     background-position: center;
   }
   
@@ -1007,7 +1007,7 @@ body {
     object-position: center;
     background-image: url('/static/img/backimg-06.jpg');
     background-repeat: no-repeat;
-    background-size: auto 100%;
+    background-size: 100% 100%;
     background-position: center;
   }
 
