--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,6 @@
       <!-- pc버전 -->
   <div class="navbar_main">
     <a class="navbar_logo" href="{% url 'about:index' %}">
-        <img src="{% static 'img/logo.png' %}" alt="스튜디오야수 로고">
         <span style="vertical-align: middle;">STUDIO<br>BEAST</span>
     </a>
     
@@ -127,6 +126,8 @@
 
     var main_two_text_one = document.querySelector(".main_two_text_one");
 
+    var main_two_wrapper = document.querySelector(".main_two_wrapper");
+
     var main_three_text_one = document.querySelector(".main_three_text_one");
 
     var main_four_text_one = document.querySelector(".main_four_text_one");
@@ -135,6 +136,12 @@
         main_two_text_one.classList.add("text-animation");
       } else {
         main_two_text_one.classList.remove("text-animation");
+      }
+
+      if (isInViewport(main_two_wrapper)) {
+        main_two_wrapper.classList.add("main_two_animate");
+      } else {
+        main_two_wrapper.classList.remove("main_two_animate");
       }
 
       if (isInViewport(main_three_text_one)) {
@@ -178,5 +185,23 @@
     });
 
   </script>
+  <script>
+    // 스크롤 이벤트 리스너 추가
+    window.addEventListener('scroll', function() {
+      // 현재 스크롤 위치
+      var scrollPosition = window.pageYOffset || document.documentElement.scrollTop || document.body.scrollTop || 0;
+  
+      // 스크롤이 1px 이상 내려갔을 때
+      if (scrollPosition > 0) {
+        // 링크 보이기
+        document.getElementById("scrollTopLink").style.display = "block";
+      } else {
+        // 링크 숨기기
+        document.getElementById("scrollTopLink").style.display = "none";
+      }
+    });
+</script>
+<a class="draggable_off" id="scrollTopLink" href="#" style="position: fixed; bottom: 1.5rem; right: 1.5rem; display: none;"><img style="width: 40px; height: 40px; opacity: 0.7;" src="{% static 'img/top.svg' %}" alt="My Image">
+</a>
 </body>
 </html>
